<resources>
    <string name="all">All</string>
    <string name="appName">Futures &amp; Options</string>
    <string name="ask">Ask</string>
    <string name="assumption">ASSUMPTIONS</string>
    <string name="atm">ATM</string>
    <string name="average_daily_volume">Average Daily Volume *</string>
    <string name="bid">Bid</string>
    <string name="business_date">Date</string>
    <string name="buy">Long</string>
    <string name="cal_iv">I.V (%)#</string>
    <string name="cal_iv4cal">I.V (%)</string>
    <string name="calexplaintext">"\#Implied volatility (IV) is calculated from last traded price of selected option series. If there is no trade of both call and put options during the day, IV from last trading day will be retrieved. 
*Interest Rate and Dividend information are provided by Reuters.

 Dividend information includes both actual and forecast values.
 Exercise style of Stock Options listed on HKEX is American style. Binomial model is used to evaluate American style option."</string>
    <string name="calexplaintexthead">For default data:</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="chart">Chart</string>
    <string name="chart_underlying_index">Underlying Price</string>
    <string name="code">Code</string>
    <string name="contract">"Contract Size
/ Multiplier"</string>
    <string name="contracts">Contracts</string>
    <string name="currency">Currency</string>
    <string name="curreny_opt">Currency Options</string>
    <string name="dataFail">Application lost network connection. Please retry your Operation.</string>
    <string name="data_up_to">*Data up to</string>
    <string name="date">Date</string>
    <string name="day_session">(Day Session)</string>
    <string name="day_text">日</string>
    <string name="delaymessage">(15 mins delayed)</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="dividend_yield">Dividend Yield (per year)%</string>
    <string name="download">Download</string>
    <string name="edit">Edit</string>
    <string name="edu_title_faq">FAQ</string>
    <string name="edu_title_glossary">Glossary</string>
    <string name="edu_title_optionabc">Options ABC</string>
    <string name="edu_title_strategies">Options Strategies</string>
    <string name="empty" />
    <string name="expired">Expired</string>
    <string name="expiry">Expiry</string>
    <string name="expiry4cal">Expiry</string>
    <string name="expiry_month">Expiry</string>
    <string name="failHead">Network Error</string>
    <string name="footerline1">©2013 Hong Kong Exchanges and Clearing Limited.</string>
    <string name="footerline2">Disclaimer</string>
    <string name="future">Futures</string>
    <string name="head_announcedate">Announced Date</string>
    <string name="head_board">"No. of
Board Lots"</string>
    <string name="head_chng">Change</string>
    <string name="head_cost">"Cost
(HKD)"</string>
    <string name="head_costnod">Cost</string>
    <string name="head_csize">"Contact Size
(shares)"</string>
    <string name="head_details">Detail</string>
    <string name="head_exdate">"EX-Date
Payment Date"</string>
    <string name="head_future">Futures</string>
    <string name="head_gainloss">"Gain / Loss
(HKD)"</string>
    <string name="head_hcode">"HKATS
Code"</string>
    <string name="head_index">Index</string>
    <string name="head_instrument">Stock / Option</string>
    <string name="head_instrument2">"Stock /
Option"</string>
    <string name="head_last">Last</string>
    <string name="head_last_traded">"Last
Traded"</string>
    <string name="head_lastchange">"Last (HKD) /
Change (%)"</string>
    <string name="head_lastd">"Last
(HKD)"</string>
    <string name="head_lastorchange">Last / Change(%)</string>
    <string name="head_legs">Legs</string>
    <string name="head_market_report">Publications</string>
    <string name="head_oi">Open Interest</string>
    <string name="head_pchng">Change (%)</string>
    <string name="head_pchng2">"Change
(%)"</string>
    <string name="head_pricechange">"Price Change
(HKD)"</string>
    <string name="head_pricechangenod">Price Change</string>
    <string name="head_product_info">Product Information</string>
    <string name="head_qty">Qty</string>
    <string name="head_seminar">Events</string>
    <string name="head_static_product">Products</string>
    <string name="head_stock">Stock</string>
    <string name="head_subscription">News Alert</string>
    <string name="head_totaloi">"Total Open
Interest"</string>
    <string name="head_turnover">"Turnover
(HKD)"</string>
    <string name="head_tvolume">"Total
Volume"</string>
    <string name="head_type">Type</string>
    <string name="head_ucode">"SEHK
Code"</string>
    <string name="head_ulastchange">"Underlying Last (HKD) /
Change(%)"</string>
    <string name="head_volume">Volume</string>
    <string name="high">High</string>
    <string name="highlow">High / Low</string>
    <string name="hint">Hint</string>
    <string name="hkats_code">HKATS Code</string>
    <string name="hkd">HKD</string>
    <string name="important_note">Important Note</string>
    <string name="index_last">Last</string>
    <string name="index_underlying">Underlying</string>
    <string name="index_underlying_code">Underlying</string>
    <string name="index_underlying_price">Underlying Last</string>
    <string name="indexoptions">Index Options</string>
    <string name="indices_disclaimer">Disclaimer on Indices</string>
    <string name="interestrate">Interest Rate (% per year)*</string>
    <string name="itm">ITM</string>
    <string name="iv">Implied Volatility</string>
    <string name="language">Language</string>
    <string name="last_price">Last Price</string>
    <string name="last_traded">Last Traded</string>
    <string name="last_traded_price">Last Traded Price</string>
    <string name="lastupdate">Last Updated</string>
    <string name="less">Less</string>
    <string name="target_price" translatable="false">Target Price</string>
    <string name="target_date" translatable="false">Target Date</string>
    <string name="low">Low</string>
    <string name="margin">"Margin
(HKD)"</string>
    <string name="market_reports">Item</string>
    <string name="menu_search">Search Underlying Code</string>
    <string name="month_text">月</string>
    <string name="more">More</string>
    <string name="mostpopular">Most Popular</string>
    <string name="msg_close_program">Quit Apps</string>
    <string name="msg_data_after0930">Data will be available after 9:30am</string>
    <string name="msg_data_after0945">Data will be available after 9:45am</string>
    <string name="msg_day_night">"Data shown for the previous night's session will be removed every day at 16:30 HKT."</string>
    <string name="msg_invalid_date">Invalid Expiry Date, please enter again.</string>
    <string name="msg_iv_zero">Volatility has to be greater than 0.</string>
    <string name="msg_perform_comp">Prices rebased to 100 for comparison</string>
    <string name="msg_strike_zero">Strike price has to be greater than 0.</string>
    <string name="msg_ulast_zero">Stock price has to be greater than 0.</string>
    <string name="name">Name</string>
    <string name="neg_message">Negative number indicates cash inflow by selling a stock/option.</string>
    <string name="night_session">(Night Session)</string>
    <string name="no_data">-</string>
    <string name="nodata_message">No related results is found</string>
    <string name="nodatayet">Data will be available after 9:45am</string>
    <string name="nooption_message">No Related Option is Found</string>
    <string name="noseminar_message">No events at the moment. Please stay tuned.</string>
    <string name="note">Note</string>
    <string name="notional_hkd">"Notional
(HKD)"</string>
    <string name="oc_own_index_msg">*Black Scholes Model is used to evaluate Index Options.</string>
    <string name="oc_own_stock_msg">*Binomial model is used to evaluate Stock Options.</string>
    <string name="odlist1">Contract Notional Value</string>
    <string name="odlist10">No. of Board Lot(s) of Underlying</string>
    <string name="odlist11">Moneyness</string>
    <string name="odlist12">Remaining day(s) until expiry</string>
    <string name="odlist13">Gearing (x)</string>
    <string name="odlist14">Delta</string>
    <string name="odlist15">Theta(Daily)</string>
    <string name="odlist16">Vega</string>
    <string name="odlist2">Contract Size (Shares)</string>
    <string name="odlist2index">Contract Multiplier</string>
    <string name="odlist3">Strike</string>
    <string name="odlist4">Expiry (D/M/Y)</string>
    <string name="odlist5">Effective Gearing (x)</string>
    <string name="odlist6">Implied Volatility (%)</string>
    <string name="odlist7">Option Premium (%)</string>
    <string name="odlist8">Previous Day Net Open Interest</string>
    <string name="odlist9">Previous Day Gross Open Interest</string>
    <string name="ok">OK</string>
    <string name="optinoal">Optional</string>
    <string name="optinoal_ch">選項</string>
    <string name="optinoal_en">Optional</string>
    <string name="optinoal_sc">选项</string>
    <string name="option_detail_ucode">Underlying Index</string>
    <string name="options_volume">Options Volume</string>
    <string name="options_volume_statistics">Options Volume Statistics</string>
    <string name="optiontype">Option Type</string>
    <string name="others">Others...</string>
    <string name="otm">OTM</string>
    <string name="perf_comp_of_key">Performance Comparison</string>
    <string name="period">Period</string>
    <string name="portfolio_msg_error">You can only store up to %d stock/options into My Portfolio</string>
    <string name="portfolio_msg_option">Added %s to your portfolio</string>
    <string name="portfolio_msg_stock">Added %s to your portfolio</string>
    <string name="position">Position</string>
    <string name="price">Price (HKD)</string>
    <string name="price_info">Price Information</string>
    <string name="products">Products</string>
    <string name="products_type">Products Type</string>
    <string name="profile_footer_msg">*Total Margin is on a gross basis. Please consult your broker for actual margin.</string>
    <string name="put">Put</string>
    <string name="quantity">Quantity</string>
    <string name="relatedoptions">Related Options</string>
    <string name="remainday">Remaining day(s) until expiry</string>
    <string name="search">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="search_msg_all">All Underlyings</string>
    <string name="search_msg_top20">Top 20 Traded Underlyings</string>
    <string name="searchresult">Result</string>
    <string name="sel_hhi">HHI - H-Shares Index Options</string>
    <string name="sel_hsi">HSI - Hang Seng Index Options</string>
    <string name="sel_mhi">MHI – Mini HSI Options</string>
    <string name="sel_mosttradedcall">Top 10 Traded Calls</string>
    <string name="sel_mosttradedclass">Top 10 Traded Classes</string>
    <string name="sel_mosttradedoption">Top 10 Traded Options</string>
    <string name="sel_mosttradedput">Top 10 Traded Puts</string>
    <string name="sel_topgain">Top 10 Gainers</string>
    <string name="sel_toploss">Top 10 Losers</string>
    <string name="sel_topturnover">Top 10 by Turnover</string>
    <string name="sell">Short</string>
    <string name="seminar">Event</string>
    <string name="seminar_date">Date: %s</string>
    <string name="seminar_speakers">Speakers: %s</string>
    <string name="seminar_time">Time: %s</string>
    <string name="seminar_venue">Venue: %s</string>
    <string name="set">Set</string>
    <string name="stock">Stock</string>
    <string name="title_tailor_made_combinations">Options Combo</string>
    <string name="trade_direction">Trade Direction</string>
    <string name="volume">Volume</string>
</resources>