<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_fullpage" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0sp" android:textColor="@color/textwhite" android:id="@+id/textView1" android:paddingLeft="5.0dip" android:paddingTop="9.0dip" android:paddingBottom="9.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stock" />
    <LinearLayout android:orientation="horizontal" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/img_lock" />
        <RelativeLayout android:orientation="vertical" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="37.0dip">
            <TextView android:textSize="12.0sp" android:textColor="@color/textwhite" android:gravity="right" android:id="@+id/textViewCode" android:layout_width="47.0dip" android:layout_height="wrap_content" android:text="@string/code" android:layout_alignParentTop="true" />
            <TextView android:textSize="12.0sp" android:textColor="@color/textwhite" android:gravity="right" android:id="@+id/textViewName" android:layout_width="47.0dip" android:layout_height="wrap_content" android:text="@string/name" android:layout_alignParentBottom="true" />
            <RelativeLayout android:paddingLeft="55.0dip" android:layout_width="fill_parent" android:layout_height="21.0dip" android:layout_alignParentTop="true">
                <com.hkex.soma.element.SelectionList android:id="@+id/selectionListCode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-4.0dip" android:layout_alignParentTop="true" />
            </RelativeLayout>
            <RelativeLayout android:paddingLeft="55.0dip" android:layout_width="fill_parent" android:layout_height="21.0dip" android:layout_alignParentBottom="true">
                <com.hkex.soma.element.SelectionList android:id="@+id/selectionListName" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:background="@drawable/bg_hline" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TableLayout android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="@color/textwhite" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/trade_direction" android:layout_weight="1.0" />
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.hkex.soma.element.SelectionList android:id="@+id/selectionListTradeDirection" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </TableRow>
    </TableLayout>
    <LinearLayout android:background="@drawable/bg_hline" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TableLayout android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="@color/textwhite" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/quantity" android:layout_weight="0.4" />
            <TextView android:textSize="12.0sp" android:textColor="@color/textwhite" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/price" android:layout_weight="0.6" />
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.hkex.soma.element.SelectionList android:id="@+id/selectionListQuantity" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.4" />
            <com.hkex.soma.element.SelectionList android:id="@+id/selectionListPrice" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.6" />
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="" android:layout_weight="0.4" />
            <TextView android:textSize="8.0sp" android:id="@+id/neg_message" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="28.0dip" android:text="@string/neg_message" android:layout_weight="0.6" />
        </TableRow>
    </TableLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:id="@+id/confirmButton" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_long_add_e" android:layout_centerHorizontal="true" />
        <ImageButton android:id="@+id/editButton" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_long_done_e" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>