<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bgwhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:background="@drawable/bg_oc_assumption"
        android:orientation="vertical">

        <ImageButton
            android:id="@id/btnLeft"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/transparent"
            android:paddingLeft="8.0dip"
            android:paddingRight="8.0dip"
            android:src="@drawable/btn_done_e" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="142.0dip"
        android:background="@drawable/bg_oc_index_assumption_mid"
        android:orientation="vertical"
        android:paddingLeft="8.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="23.0dip"
            android:gravity="center"
            android:text="@string/assumption"
            android:textColor="@color/textbluegrey"
            android:textSize="12.0sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="54.0dip"
            android:orientation="vertical"
            android:paddingTop="2.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interestrate"
                android:textColor="@color/textwhite"
                android:textSize="14.0sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/cal_rate"
                    android:layout_width="60.0dip"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:padding="6.0dip"
                    android:text="@string/no_data"
                    android:textColor="@color/textwhite"
                    android:textSize="14.0sp" />

                <SeekBar
                    android:id="@id/seekbar_irate"
                    style="@style/SeekBarHoloTheme"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="64.0dip"
            android:orientation="vertical"
            android:paddingTop="2.0dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dividend_yield"
                android:textColor="@color/textwhite"
                android:textSize="14.0sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dividend_yield"
                style="@style/EditTextHoloTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8.0dip"
                android:inputType="numberDecimal"
                android:textColor="@color/textwhite"
                android:textSize="14.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_assumption_end"
        android:orientation="vertical"
        android:paddingLeft="8.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="8.0dip">

        <ImageButton
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:gravity="center"
            android:src="@drawable/btn_reset_e" />

        <TextView
            android:id="@+id/calculatedresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50.0dip"
            android:text="@string/calexplaintexthead"
            android:textColor="@color/textwhite"
            android:textSize="10.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calculatedresult2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="62.0dip"
            android:text="@string/calexplaintext"
            android:textColor="@color/textwhite"
            android:textSize="10.0sp" />
    </RelativeLayout>
</LinearLayout>